# homework

./: .gitignore  CMakeLists.txt
20230410/BaiTap1/: tcp_client.c
20230410/BaiTap2/: client_send.txt  tcp_server.c
20230410/BaiTap3/: sv_client.c
20230410/BaiTap4/: sv_log.txt  sv_server.c
20230417/BaiTap01.03/: udp_file_receiver.c
20230522/: chat_client  chat_client.c  chat_server  chat_server.c
classwork_20230417/: info_server.c
classwork_20230417/BaiTap01.01/: info_client.c
classwork_20230417/BaiTap01.02/: client.c  server.c
classwork_20230417/BaiTap01.03/: udp_file_sender.c
practice/non_blocking/: non_blocking.c  non_blocking_client  non_blocking_client.c  non_blocking_server
